--- a/public/index.html
+++ b/public/index.html
@@ -58,6 +58,7 @@
         </div>
     </div>
 
-    <script src="game.js"></script>
+    <script src="realtime-client.js"></script>
+    <script src="music-box-game.js"></script>
 </body>
 </html>
